--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 ﻿body {
-﻿   display: none;
+    display: none;
     position: relative;
     font-family: 'Open Sans', sans-serif;
     /*padding-top: 110px;*/
